--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="card-body">
             <h5 class="card-title">Algoritmo de Euclides y Sistemas Numéricos</h5>
             <p class="card-text">¿Sabes que es y como se implementa?</p>
-            <a href="pages/pT1/principalT1.html" class="btn btn-primary">¡Haz click aquí para conocerlo!</a>
+            <a href="pages/pT1/principal.html" class="btn btn-primary">¡Haz click aquí para conocerlo!</a>
           </div>
         </div>
         <!-- Final Carta-->
@@ -35,9 +35,9 @@
         <!-- Inicio Carta-->
         <div class="card border-dark my-3 mx-3">
           <div class="card-body">
-            <h5 class="card-title">Tema</h5>
-            <p class="card-text">Mensaje...</p>
-            <a href="#" class="btn btn-primary">¡Haz click aquí para conocerlo!</a>
+            <h5 class="card-title">Residuos Cuadráticos</h5>
+            <p class="card-text">¿Sabes todo lo que contiene este tema?</p>
+            <a href="pages/pT7/principal.html" class="btn btn-primary">¡Haz click aquí para conocerlo!</a>
           </div>
         </div>
         <!-- Final Carta-->
