--- a/pages/pT7/raices.html
+++ b/pages/pT7/raices.html
@@ -20,7 +20,7 @@
             <nav class="navbar sticky-top bg-dark">
                 <p class="text-principal-title">Raíces primitivas</p>
                 <button class="btn btn-outline-light" type="button">
-                    <a class="text-light" href="principalT1.html">Volver</a>
+                    <a class="text-light" href="principal.html">Volver</a>
                 </button>
             </nav>
 
