--- a/pages/pT7/principal.html
+++ b/pages/pT7/principal.html
@@ -73,7 +73,7 @@
 							</li>
 						</ul>
 						<div class="card-body">
-							<a href="euclidesPage.html" class="btn btn-primary">¡Haz click aquí para verlo completo!</a>
+							<a href="potenciaModulon.html" class="btn btn-primary">¡Haz click aquí para verlo completo!</a>
 						</div>
 					</div>
 				</div>
@@ -190,13 +190,13 @@
 									Teoremas
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="pages/basesPage.html#baseDecimal">Teorema 4.1</a>
-									<a class="dropdown-item" href="pages/basesPage.html#baseBinaria">Teorema 4.2</a>
-									<a class="dropdown-item" href="pages/basesPage.html#baseOctal">Teorema 4.3</a>										
+									<a class="dropdown-item" href="potenciaModulon.html#Teorema4.1">Teorema 4.1</a>
+									<a class="dropdown-item" href="potenciaModulon.html#Teorema4.2">Teorema 4.2</a>
+									<a class="dropdown-item" href="potenciaModulon.html#Teorema4.3">Teorema 4.3</a>										
 								</div>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item" href="pages/basesPage.html#ejemplo">
+								<a class="text-body card-item" href="potenciaModulon.html#EjemplosV">
 									<img src="../../resources/icons/bookmark.svg" alt="" width="32" height="32">
 									Ejemplos
 								</a>
@@ -219,32 +219,32 @@
 
 						<ul class="list-group list-group-flush">
 							<li class="list-group-item">
-								<a class="text-body card-item" href="raices.html#defir">
+								<a class="text-body card-item" href="pages/euclidesPage.html#euclides">
 									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
 									Definición Raíces primitivas
 								</a>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item" href="raices.html#ejemplor1">
+								<a class="text-body card-item" href="pages/basesPage.html#ejemplo">
 									<img src="../../resources/icons/bookmark.svg" alt="" width="32" height="32">
 									Ejemplo
 								</a>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item" href="raices.html#tpimp">
+								<a class="text-body card-item" href="#">
 									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
 									Teorema potencias incongruentes modulo-p
 								</a>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item" href="raices.html#ejemplor2">
+								<a class="text-body card-item" href="pages/basesPage.html#ejemplo">
 									<img src="../../resources/icons/bookmark.svg" alt="" width="32" height="32">
 									Ejemplo
 								</a>
 							</li>
 						</ul>
 						<div class="card-body">
-							<a href="raices.html" class="btn btn-primary">¡Haz click aquí para verlo completo!</a>
+							<a href="#" class="btn btn-primary">¡Haz click aquí para verlo completo!</a>
 						</div>
 					</div>
 				</div>
