--- a/pages/pT7/Simbolo de Jacobi.html
+++ b/pages/pT7/Simbolo de Jacobi.html
@@ -21,7 +21,7 @@
 		<nav class="navbar sticky-top bg-dark">
 			<p class="text-principal-title">Residuos Cuadraticos</p>
 			<button class="btn btn-outline-light" type="button">
-				<a class="text-light" href="principalT1.html">Volver</a>
+				<a class="text-light" href="principal.html">Volver</a>
 			</button>
 		</nav>
 
