--- a/pages/pT7/principal.html
+++ b/pages/pT7/principal.html
@@ -110,7 +110,7 @@
 							</li>
 						</ul>
 						<div class="card-body">
-							<a href="basesPage.html" class="btn btn-primary">¡Haz click aquí para verlo completo!</a>
+							<a href="page2.html" class="btn btn-primary">¡Haz click aquí para verlo completo!</a>
 						</div>
 					</div>
 				</div>
