--- a/pages/pT7/page2.html
+++ b/pages/pT7/page2.html
@@ -20,7 +20,7 @@
 		<nav class="navbar sticky-top bg-dark">
 			<p class="text-principal-title">¿Qué tanto sabe de los residuos cuadráticos?</p>
 			<button class="btn btn-outline-light" type="button">
-				<a class="text-light" href="principalT1.html">Volver</a>
+				<a class="text-light" href="principal.html">Volver</a>
 			</button>
 		</nav>
 
