--- a/pages/pT7/congruenciasgrado2.html
+++ b/pages/pT7/congruenciasgrado2.html
@@ -283,6 +283,21 @@
     </div>
     <!-- Fin Carta-->
 
+    <!-- Inicio Carta-->
+    <div class="card border-dark mx-auto my-5" style="max-width: 1300px;" id="bibliografia">
+        <p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Bibliografía</p>
+        <hr size="2px" color="black" />
+        <div class="row no-gutters">
+            <div class="col">
+                <div class="card-body">
+                    <p class="card-text card-content text-justify">
+                        <li>Jiménez, L., Gordillo, J., y Rubiano, G. (2004). Teoría de números para principiantes (2a. ed.). Bogotá: Universidad Nacional de Colombia</li>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Fin Carta-->
 
     <div class="container">
         <footer>
