--- a/pages/pT7/potenciaModulon.html
+++ b/pages/pT7/potenciaModulon.html
@@ -19,7 +19,7 @@
 
 
 		<nav class="navbar sticky-top bg-dark">
-			<p class="text-principal-title">¿Qué tanto sabe de los sistemas de numeración?</p>
+			<p class="text-principal-title">Potencia modulo N</p>
 			<button class="btn btn-outline-light" type="button">
 				<a class="text-light" href="principal.html">Volver</a>
 			</button>
@@ -27,8 +27,8 @@
 
 		<div class="container-sm">
 			<!-- Inicio Carta-->
-			<div  id="def" class="card border-dark mx-auto my-5" style="max-width: 1000px;">
-				<p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Definicion Potencias Módulo n</p>
+			<div  id="def" class="card border-dark mx-auto my-5" style="max-width: 1300px;">
+				<p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Definición Potencias Módulo n</p>
 				<hr size="2px" color="black" />
 				<div class="row no-gutters">
 					<div class="col">
@@ -48,12 +48,12 @@
 						</div>
 					</div>
 				</div>
-				Adaptado de Jiménez et al (2004): 172
+				Adaptación de (Jiménez, L., Gordillo, J., y Rubiano, G., 2004: 172)
 			</div>
 			<!-- Fin Carta-->
 
 			<!-- Inicio Carta-->
-			<div class="card border-dark mx-auto my-5" style="max-width: 1000px;" id="Ejemplo">
+			<div class="card border-dark mx-auto my-5" style="max-width: 1300px;" id="Ejemplo">
 				<p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Ejemplo</p>
 				<hr size="2px" color="black" />
 				<p class="card-text card-content mx-auto my-auto text-justify">
@@ -106,12 +106,12 @@
 						</div>
 					</div>
 				</div>
-				Adaptado de Jiménez et al (2004): 172
+				Adaptación de (Jiménez et al., 2004: 172)
 			</div>
 			<!-- Fin Carta-->
 
 			<!-- Inicio Carta-->
-			<div  id="Teorema4.1" class="card border-dark mx-auto my-5" style="max-width: 1000px;">
+			<div  id="Teorema4.1" class="card border-dark mx-auto my-5" style="max-width: 1300px;">
 				<p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Teorema 4.1</p>
 				<hr size="2px" color="black" />
 				<div class="row no-gutters">
@@ -123,12 +123,12 @@
 						</div>
 					</div>
 				</div>
-				Adaptado de Jiménez et al (2004): 172
+				Adaptación de (Jiménez et al., 2004: 172)
 			</div>
 			<!-- Fin Carta-->
 
 			<!-- Inicio Carta-->
-			<div  id="Teorema4.2" class="card border-dark mx-auto my-5" style="max-width: 1000px;">
+			<div  id="Teorema4.2" class="card border-dark mx-auto my-5" style="max-width: 1300px;">
 				<p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Teorema 4.2</p>
 				<hr size="2px" color="black" />
 				<div class="row no-gutters">
@@ -140,12 +140,12 @@
 						</div>
 					</div>
 				</div>
-				Adaptado de Jiménez et al (2004): 174
+				Adaptación de (Jiménez et al., 2004: 174)
 			</div>
 			<!-- Fin Carta-->
 
 			<!-- Inicio Carta-->
-			<div  id="Teorema4.3" class="card border-dark mx-auto my-5" style="max-width: 1000px;">
+			<div  id="Teorema4.3" class="card border-dark mx-auto my-5" style="max-width: 1300px;">
 				<p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Teorema 4.3</p>
 				<hr size="2px" color="black" />
 				<div class="row no-gutters">
@@ -158,12 +158,12 @@
 						</div>
 					</div>
 				</div>
-				Adaptado de Jiménez et al (2004): 174
+				Adaptación de (Jiménez et al., 2004: 174)
 			</div>
 			<!-- Fin Carta-->
 
 			<!-- Inicio Carta-->
-			<div class="card border-dark mx-auto my-5" style="max-width: 1000px;" id="EjemplosV">
+			<div class="card border-dark mx-auto my-5" style="max-width: 1300px;" id="EjemplosV">
 				<p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Ejemplo  Teorema 4.1</p>
 				<hr size="2px">
 				</hr>
@@ -213,12 +213,12 @@
 						</div>
 					</div>
 				</div>
-				Adaptado de Jiménez et al (2004): 173
+				Adaptación de (Jiménez et al., 2004: 173)
 			</div>
 			<!-- Fin Carta-->
 			
 			<!-- Inicio Carta-->
-			<div class="card border-dark mx-auto my-5" style="max-width: 1000px;">
+			<div class="card border-dark mx-auto my-5" style="max-width: 1300px;">
 				<p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Ejemplo  Teorema 4.2</p>
 				<hr size="2px">
 				</hr>
@@ -244,12 +244,12 @@
 						</div>
 					</div>
 				</div>
-				Adaptado de Jiménez et al (2004): 175
+				Adaptación de (Jiménez et al., 2004: 175)
 			</div>
 			<!-- Fin Carta-->
 
 			<!-- Inicio Carta-->
-			<div class="card border-dark mx-auto my-5" style="max-width: 1000px;">
+			<div class="card border-dark mx-auto my-5" style="max-width: 1300px;">
 				<p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Ejemplo  Teorema 4.3</p>
 				<hr size="2px">
 				</hr>
@@ -286,25 +286,43 @@
 						</div>
 					</div>
 				</div>
-				Adaptado de Jiménez et al (2004): 175
+				Adaptación de (Jiménez et al., 2004: 175)
 			</div>
 			<!-- Fin Carta-->
 
 			<!-- Inicio Carta-->
-			<div class="card border-dark mx-auto my-5" style="max-width: 1000px;">
+			<div class="card border-dark mx-auto my-5" style="max-width: 1300px;">
 				<p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Ejemplo Interactivo</p>
 				<hr size="2px" color="black" />
 				<div class="row no-gutters">
 					<div class="col">
 						<div class="card-body">
 							<p class="card-text card-content text-justify">
-								Digita un número y encontraremos sus coprimos o primos relativos, es decir los números primos menores que el número que ingresaste:<br>					
+								Digita un número y encontraremos sus coprimos o primos relativos, es decir los números que no tienen ningún factor primo en común:<br>					
 								
 								Digita el número (mayor a 2):&nbsp&nbsp&nbsp
 								<input type="text" id="num1" name="num" placeholder="Escribe un número" >
 								<input type="button" name="btnprimo" value="Calcular" onclick="CalcularPrimos();">
 								<p class="card-text card-content text-justify" id="Resultado"><p>
 							</p>					
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Fin Carta-->
+
+			
+			<!-- Inicio Carta-->
+			<div class="card border-dark mx-auto my-5" style="max-width: 1300px;" id="bibliografia">
+				<p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Bibliografía</p>
+				<hr size="2px" color="black" />
+				<div class="row no-gutters">
+					<div class="col">
+						<div class="card-body">
+							<p class="card-text card-content text-justify">
+							<li>Jiménez, L., Gordillo, J., y Rubiano, G. (2004). Teoría de números para principiantes (2a. ed.).
+									Bogotá: Universidad Nacional de Colombia</li>
+							</p>
 						</div>
 					</div>
 				</div>
