--- a/pages/pT7/principal.html
+++ b/pages/pT7/principal.html
@@ -6,9 +6,15 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link href="../../css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<link href="../../css/personalStyle.css" rel="stylesheet" media="screen">
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+		crossorigin="anonymous"></script>
 	<title> Introducción a la Teoría de Números </title>
 
 </head>
@@ -23,6 +29,15 @@
 		</nav>
 
 		<div class "container-sm">
+			<div class="col text-center">
+				<img src="../../resources/escudoUD.png" width="200" height="200" alt="" data-toggle="tooltip"
+					data-placement="top" title="CO-GESTORES grupo 7:&nbsp;
+					Hanna Caroline Villamil Ortiz &nbsp;(20161150007) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;hcvillamilo@correo.udistrital.edu.co&nbsp;
+					Juan Sebastián Sánchez Tabares &nbsp;(20181020008) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;jussanchezt@correo.udistrital.edu.co&nbsp;
+					David Armando Rodríguez Varón &nbsp;(20181020041) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;davarodriguezv@correo.udistrital.edu.co&nbsp;
+					José Luis Quintero Cañizalez &nbsp;(20181020061) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;jolquinteroc@correo.udistrital.edu.co&nbsp;
+					Ivan Santiago Chauta Gaviria &nbsp;(20181020073) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ischautag@correo.udistrital.edu.co&nbsp;">
+			</div>
 			<div class="row mx-auto row-cols-3 row-cols-md-2" style="width: 1000px;">
 
 				<!-- Inicio Carta-->
@@ -30,8 +45,8 @@
 					<div class="card border border-dark p-3">
 						<img src="../../resources/rT7/congruenciasModulop.jpg" class="card-img-top rounded" alt="...">
 						<div class="card-body">
-							<p class="card-title font-weight-bolder text-uppercase text-center">Congruencias de 2do grado con módulo primo</p>
-							<p class="card-text card-view font-italic font-weight-light text-justify">* * * Resumen * * * </p>
+							<p class="card-title font-weight-bolder text-uppercase text-center">Congruencias de 2do
+								grado con módulo primo</p>
 						</div>
 
 						<ul class="list-group list-group-flush">
@@ -48,7 +63,9 @@
 								</a>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item nav-link dropdown-toggle text-body" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								<a class="text-body card-item nav-link dropdown-toggle text-body" href="#"
+									id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+									aria-expanded="false">
 									<img src="../../resources/icons/folder.svg" alt="" width="32" height="32">
 									Teoremas
 								</a>
@@ -56,7 +73,7 @@
 									<a class="dropdown-item" href="pages/basesPage.html#baseDecimal">Teorema 1.1</a>
 									<a class="dropdown-item" href="pages/basesPage.html#baseBinaria">Teorema 1.2</a>
 									<a class="dropdown-item" href="pages/basesPage.html#baseOctal">Teorema 1.3</a>
-									<a class="dropdown-item" href="pages/basesPage.html#baseHexadecimal">Teorema 1.4</a>								
+									<a class="dropdown-item" href="pages/basesPage.html#baseHexadecimal">Teorema 1.4</a>
 								</div>
 							</li>
 							<li class="list-group-item">
@@ -64,16 +81,23 @@
 									<img src="../../resources/icons/bookmark.svg" alt="" width="32" height="32">
 									Ejemplos
 								</a>
-							</li>						
+							</li>
 							<li class="list-group-item">
 								<a class="text-body card-item" href="pages/euclidesPage.html#ejemplo">
 									<img src="../../resources/icons/bookmark.svg" alt="" width="32" height="32">
 									Corolario
 								</a>
 							</li>
+							<li class="list-group-item">
+								<a class="text-body card-item" href="raices.html#bibliografia">
+									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
+									Bibliografía
+								</a>
+							</li>
 						</ul>
 						<div class="card-body">
-							<a href="potenciaModulon.html" class="btn btn-primary">¡Haz click aquí para verlo completo!</a>
+							<a href="congruenciasgrado2.html" class="btn btn-primary">¡Haz click aquí para verlo
+								completo!</a>
 						</div>
 					</div>
 				</div>
@@ -84,8 +108,8 @@
 					<div class="card border border-dark">
 						<img src="../../resources/rT7/leyReciprocidad.jpg" class="card-img-top rounded" alt="...">
 						<div class="card-body">
-							<p class="card-title font-weight-bolder text-uppercase text-center">Ley de Reciprocidad cuadrática</p>
-							<p class="card-text card-view font-italic font-weight-light text-justify">* * * Resumen * * * </p>
+							<p class="card-title font-weight-bolder text-uppercase text-center">Ley de Reciprocidad
+								cuadrática</p>
 						</div>
 
 						<ul class="list-group list-group-flush">
@@ -113,6 +137,12 @@
 									Ejemplo
 								</a>
 							</li>
+							<li class="list-group-item">
+								<a class="text-body card-item" href="raices.html#bibliografia">
+									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
+									Bibliografía
+								</a>
+							</li>
 						</ul>
 						<div class="card-body">
 							<a href="basesPage.html" class="btn btn-primary">¡Haz click aquí para verlo completo!</a>
@@ -127,7 +157,6 @@
 						<img src="../../resources/rT7/simboloJacobi.jpg" class="card-img-top rounded" alt="...">
 						<div class="card-body">
 							<p class="card-title font-weight-bolder text-uppercase text-center">Símbolo de Jacobi</p>
-							<p class="card-text card-view font-italic font-weight-light text-justify">* * * Resumen * * * </p>
 						</div>
 
 						<ul class="list-group list-group-flush">
@@ -138,14 +167,16 @@
 								</a>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item nav-link dropdown-toggle text-body" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								<a class="text-body card-item nav-link dropdown-toggle text-body" href="#"
+									id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+									aria-expanded="false">
 									<img src="../../resources/icons/folder.svg" alt="" width="32" height="32">
 									Teoremas
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item" href="pages/basesPage.html#baseDecimal">Teorema 3.1</a>
 									<a class="dropdown-item" href="pages/basesPage.html#baseBinaria">Teorema 3.2</a>
-									<a class="dropdown-item" href="pages/basesPage.html#baseOctal">Teorema 3.3</a>										
+									<a class="dropdown-item" href="pages/basesPage.html#baseOctal">Teorema 3.3</a>
 								</div>
 							</li>
 							<li class="list-group-item">
@@ -154,9 +185,15 @@
 									Ejemplos
 								</a>
 							</li>
+							<li class="list-group-item">
+								<a class="text-body card-item" href="raices.html#bibliografia">
+									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
+									Bibliografía
+								</a>
+							</li>
 						</ul>
 						<div class="card-body">
-							<a href="#" class="btn btn-primary">¡Haz click aquí para verlo completo!</a>
+							<a href="SimboloJacobi.html" class="btn btn-primary">¡Haz click aquí para verlo completo!</a>
 						</div>
 					</div>
 				</div>
@@ -168,9 +205,7 @@
 						<img src="../../resources/rT7/potenciaModulon.jpg" class="card-img-top rounded" alt="...">
 						<div class="card-body">
 							<p class="card-title font-weight-bolder text-uppercase text-center">Potencia módulo n</p>
-							<p class="card-text card-view font-italic font-weight-light text-justify">* * * Resumen * * * </p>
 						</div>
-
 						<ul class="list-group list-group-flush">
 							<li class="list-group-item">
 								<a class="text-body card-item" href="potenciaModulon.html#def">
@@ -185,14 +220,16 @@
 								</a>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item nav-link dropdown-toggle text-body" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								<a class="text-body card-item nav-link dropdown-toggle text-body" href="#"
+									id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+									aria-expanded="false">
 									<img src="../../resources/icons/folder.svg" alt="" width="32" height="32">
 									Teoremas
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item" href="potenciaModulon.html#Teorema4.1">Teorema 4.1</a>
 									<a class="dropdown-item" href="potenciaModulon.html#Teorema4.2">Teorema 4.2</a>
-									<a class="dropdown-item" href="potenciaModulon.html#Teorema4.3">Teorema 4.3</a>										
+									<a class="dropdown-item" href="potenciaModulon.html#Teorema4.3">Teorema 4.3</a>
 								</div>
 							</li>
 							<li class="list-group-item">
@@ -200,51 +237,64 @@
 									<img src="../../resources/icons/bookmark.svg" alt="" width="32" height="32">
 									Ejemplos
 								</a>
-							</li>						
+							</li>
+							<li class="list-group-item">
+								<a class="text-body card-item" href="raices.html#bibliografia">
+									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
+									Bibliografía
+								</a>
+							</li>
 						</ul>
 						<div class="card-body">
-							<a href="potenciaModulon.html" class="btn btn-primary">¡Haz click aquí para verlo completo!</a>
+							<a href="potenciaModulon.html" class="btn btn-primary">¡Haz click aquí para verlo
+								completo!</a>
 						</div>
 					</div>
 				</div>
 				<!-- Fin Carta-->
+
 				<!-- Inicio Carta-->
 				<div class="col-sm-6 p-4">
 					<div class="card border border-dark">
 						<img src="../../resources/rT7/raicesPrimitivas.jpg" class="card-img-top rounded" alt="...">
 						<div class="card-body">
 							<p class="card-title font-weight-bolder text-uppercase text-center">Raíces primitivas</p>
-							<p class="card-text card-view font-italic font-weight-light text-justify">* * * Resumen * * * </p>
 						</div>
 
 						<ul class="list-group list-group-flush">
 							<li class="list-group-item">
-								<a class="text-body card-item" href="pages/euclidesPage.html#euclides">
+								<a class="text-body card-item" href="raices.html#def">
 									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
 									Definición Raíces primitivas
 								</a>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item" href="pages/basesPage.html#ejemplo">
+								<a class="text-body card-item" href="raices.html#ejemplo1">
 									<img src="../../resources/icons/bookmark.svg" alt="" width="32" height="32">
 									Ejemplo
 								</a>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item" href="#">
+								<a class="text-body card-item" href="raices.html#tpimp">
 									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
 									Teorema potencias incongruentes modulo-p
 								</a>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item" href="pages/basesPage.html#ejemplo">
+								<a class="text-body card-item" href="raices.html#ejemplo2">
 									<img src="../../resources/icons/bookmark.svg" alt="" width="32" height="32">
 									Ejemplo
 								</a>
 							</li>
+							<li class="list-group-item">
+								<a class="text-body card-item" href="raices.html#bibliografia">
+									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
+									Bibliografía
+								</a>
+							</li>
 						</ul>
 						<div class="card-body">
-							<a href="#" class="btn btn-primary">¡Haz click aquí para verlo completo!</a>
+							<a href="raices.html" class="btn btn-primary">¡Haz click aquí para verlo completo!</a>
 						</div>
 					</div>
 				</div>
