Falta congruencias2 y principal

--- a/pages/pT7/SimboloJacobi.html
+++ b/pages/pT7/SimboloJacobi.html
@@ -24,7 +24,7 @@
 
 
 		<nav class="navbar sticky-top bg-dark">
-			<p class="text-principal-title">Simbolo de Jacobi/p>
+			<p class="text-principal-title">Simbolo de Jacobi</p>
 			<button class="btn btn-outline-light" type="button">
 				<a class="text-light" href="principal.html">Volver</a>
 			</button>
@@ -32,7 +32,7 @@
 
 		<div class="container-sm">
 			<!-- Inicio Carta-->
-			<div class="card border-dark mx-auto my-5" style="max-width: 1300px	;" id="Simbolo de Jacobi">
+			<div class="card border-dark mx-auto my-5" style="max-width: 1300px	;" id="def">
 				<p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Simbolo de Jacobi</p>
 				<hr size="2px" color="black" />
 				<div class="row no-gutters">
@@ -51,7 +51,7 @@
 			<!-- Fin Carta-->
 
 			<!-- Inicio Carta-->
-			<div class="card border-dark mx-auto my-5" style="max-width: 1300px;" id="Definicion SJ">
+			<div class="card border-dark mx-auto my-5" style="max-width: 1300px;" id="DefinicionSJ">
 				<p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Definicion</p>
 				<hr size="2px" color="black" />
 				<div class="row no-gutters">
@@ -74,16 +74,16 @@
 							</div>
 							<p class="card-text card-content text-justify">
 								<i>donde (a|p<sub>i</sub>) es el símbolo de Legendre. Además definimos (a|1) = 1</i>
-								</br>Jiménez et al (2004): 167
 							</p>
 						</div>
 					</div>
 				</div>
+				Adaptación de (Jiménez, L., Gordillo, J., y Rubiano, G., 2004: 167)
 			</div>
 			<!-- Fin Carta-->
 
 			<!-- Inicio Carta-->
-			<div class="card border-dark mx-auto my-5" style="max-width: 1300px;" id="propiedades SJ">
+			<div class="card border-dark mx-auto my-5" style="max-width: 1300px;" id="propiedadesSJ">
 				<p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Propiedades</p>
 				<hr size="2px" color="black" />
 				<div class="row no-gutters">
@@ -100,17 +100,15 @@
 								3. (1|P) = 1.</br>
 								4. (a|P)(b|P) = (ab|P)
 							</p>
-							<p class="card-text card-content text-justify">
-								Jiménez et al (2004): 167
-							</p>
 						</div>
 					</div>
 				</div>
+				Adaptación de (Jiménez et al., 2004: 167)
 			</div>
 			<!-- Fin Carta-->
 
 			<!-- Inicio Carta-->
-			<div class="card border-dark mx-auto my-5" style="max-width: 1300px;" id="Teoremas SJ">
+			<div class="card border-dark mx-auto my-5" style="max-width: 1300px;" id="TeoremasSJ">
 				<p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Teoremas</p>
 				<hr size="2px" color="black" />
 				<div class="row no-gutters">
@@ -135,19 +133,16 @@
 								(P|Q)(Q|P) = (−1)<sup>r</sup> </br>
 								con r = <sup>1</sup>/<sub>2</sub> (P − 1) <sup>1</sup>/<sub>2</sub>(Q − 1)
 							</p>
-							<p class="card-text card-content text-justify">
-								Jiménez et al (2004): 169
-							</p>
-
 						</div>
 					</div>
 				</div>
+				Adaptación de (Jiménez et al., 2004: 169)
 			</div>
 			<!-- Fin Carta-->
 
 
 			<!-- Inicio Carta-->
-			<div class="card border-dark mx-auto my-5" style="max-width: 1300px;" id="ejemplo SJ">
+			<div class="card border-dark mx-auto my-5" style="max-width: 1300px;" id="ejemploSJ">
 				<p class="card-title font-weight-bolder text-uppercase mx-auto text-center">Ejemplo</p>
 				<hr size="2px" color="black" />
 				<p class="card-text card-content mx-auto my-auto text-justify">
@@ -218,8 +213,8 @@
 					<div class="col">
 						<div class="card-body">
 							<p class="card-text card-content text-justify">
-								<li>Jiménez, L., Gordillo, J., y Rubiano, G. (2004). Teoría de números para
-									principiantes (2a. ed.).
+								<li>Jiménez, L., Gordillo, J., y Rubiano, G. (2004). <i>Teoría de números para
+									principiantes</i> (2a. ed.).
 									Bogotá: Universidad Nacional de Colombia</li>
 							</p>
 						</div>
