--- a/pages/pT7/principal.html
+++ b/pages/pT7/principal.html
@@ -51,13 +51,13 @@
 
 						<ul class="list-group list-group-flush">
 							<li class="list-group-item">
-								<a class="text-body card-item" href="pages/euclidesPage.html#algoritmo">
+								<a class="text-body card-item" href="congruenciasgrado2.html#def">
 									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
 									Definición residuos cuadráticos
 								</a>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item" href="pages/euclidesPage.html#euclides">
+								<a class="text-body card-item" href="congruenciasgrado2.html">
 									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
 									Definición Símbolo de Legendre
 								</a>
@@ -70,26 +70,26 @@
 									Teoremas
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="pages/basesPage.html#baseDecimal">Teorema 1.1</a>
-									<a class="dropdown-item" href="pages/basesPage.html#baseBinaria">Teorema 1.2</a>
-									<a class="dropdown-item" href="pages/basesPage.html#baseOctal">Teorema 1.3</a>
-									<a class="dropdown-item" href="pages/basesPage.html#baseHexadecimal">Teorema 1.4</a>
+									<a class="dropdown-item" href="congruenciasgrado2.html#baseDecimal">Teorema 1.1</a>
+									<a class="dropdown-item" href="congruenciasgrado2.html#baseBinaria">Teorema 1.2</a>
+									<a class="dropdown-item" href="congruenciasgrado2.html#baseOctal">Teorema 1.3</a>
+									<a class="dropdown-item" href="congruenciasgrado2.html#baseHexadecimal">Teorema 1.4</a>
 								</div>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item" href="pages/basesPage.html#ejemplo">
+								<a class="text-body card-item" href="congruenciasgrado2.html#ejemplo">
 									<img src="../../resources/icons/bookmark.svg" alt="" width="32" height="32">
 									Ejemplos
 								</a>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item" href="pages/euclidesPage.html#ejemplo">
+								<a class="text-body card-item" href="congruenciasgrado2.html#Corolario">
 									<img src="../../resources/icons/bookmark.svg" alt="" width="32" height="32">
 									Corolario
 								</a>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item" href="raices.html#bibliografia">
+								<a class="text-body card-item" href="congruenciasgrado2.html#bibliografia">
 									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
 									Bibliografía
 								</a>
@@ -114,33 +114,39 @@
 
 						<ul class="list-group list-group-flush">
 							<li class="list-group-item">
-								<a class="text-body card-item" href="pages/euclidesPage.html#euclides">
+								<a class="text-body card-item" href="reciprocidad.html#def">
 									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
 									Definición Reciprocidad Cuadrática
 								</a>
 							</li>
 							
 							<li class="list-group-item">
-								<a class="text-body card-item" href="pages/euclidesPage.html#euclides">
+								<a class="text-body card-item" href="reciprocidad.html#teorema">
 									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
 									Teorema Ley de Reciprocidad
 								</a>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item" href="pages/basesPage.html#ejemplo">
-									<img src="../../resources/icons/bookmark.svg" alt="" width="32" height="32">
-									Ejemplo
+								<a class="text-body card-item nav-link dropdown-toggle text-body" href="#"
+									id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+									aria-expanded="false">
+									<img src="../../resources/icons/folder.svg" alt="" width="32" height="32">
+									Ejemplos
 								</a>
+								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+									<a class="dropdown-item" href="reciprocidad.html#ejem1">Ejemplo 1</a>
+									<a class="dropdown-item" href="reciprocidad.html#ejem2">Ejemplo 2</a>
+								</div>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item" href="raices.html#bibliografia">
+								<a class="text-body card-item" href="reciprocidad.html#bibliografia">
 									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
 									Bibliografía
 								</a>
 							</li>
 						</ul>
 						<div class="card-body">
-							<a href="page2.html" class="btn btn-primary">¡Haz click aquí para verlo completo!</a>
+							<a href="reciprocidad.html" class="btn btn-primary">¡Haz click aquí para verlo completo!</a>
 						</div>
 					</div>
 				</div>
@@ -156,32 +162,31 @@
 
 						<ul class="list-group list-group-flush">
 							<li class="list-group-item">
-								<a class="text-body card-item" href="pages/euclidesPage.html#euclides">
+								<a class="text-body card-item" href="SimboloJacobi.html#def">
 									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
 									Definición Símbolo de Jacobi
 								</a>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item nav-link dropdown-toggle text-body" href="#"
-									id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-									aria-expanded="false">
-									<img src="../../resources/icons/folder.svg" alt="" width="32" height="32">
-									Teoremas
+								<a class="text-body card-item" href="SimboloJacobi.html#propiedadesSJ">
+									<img src="../../resources/icons/bookmark.svg" alt="" width="32" height="32">
+									Propiedades
 								</a>
-								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="pages/basesPage.html#baseDecimal">Teorema 3.1</a>
-									<a class="dropdown-item" href="pages/basesPage.html#baseBinaria">Teorema 3.2</a>
-									<a class="dropdown-item" href="pages/basesPage.html#baseOctal">Teorema 3.3</a>
-								</div>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item" href="pages/basesPage.html#ejemplo">
+								<a class="text-body card-item" href="SimboloJacobi.html#TeoremasSJ">
+									<img src="../../resources/icons/bookmark.svg" alt="" width="32" height="32">
+									Teoremas
+								</a>
+							</li>
+							<li class="list-group-item">
+								<a class="text-body card-item" href="SimboloJacobi.html#ejemploSJ">
 									<img src="../../resources/icons/bookmark.svg" alt="" width="32" height="32">
 									Ejemplos
 								</a>
 							</li>
 							<li class="list-group-item">
-								<a class="text-body card-item" href="raices.html#bibliografia">
+								<a class="text-body card-item" href="SimboloJacobi.html#bibliografia">
 									<img src="../../resources/icons/question.svg" alt="" width="32" height="32">
 									Bibliografía
 								</a>
