--- a/pages/pT7/raices.html
+++ b/pages/pT7/raices.html
@@ -213,9 +213,9 @@
 					<div class="col">
 						<div class="card-body">
 							<p class="card-text card-content text-justify">
-							<li>Jiménez, L., Gordillo, J., y Rubiano, G. (2004). Teoría de números para principiantes (2a. ed.).
-									Bogotá: Universidad Nacional de Colombia</li>
-							</p>
+                                <li>Jiménez, L., Gordillo, J., y Rubiano, G. (2004). <i>Teoría de números para
+                                    principiantes</i> (2a. ed.).
+                                    Bogotá: Universidad Nacional de Colombia</li>
 						</div>
 					</div>
 				</div>
